<resources>
    <string name="app_name">Nhắc Nhở</string>
    <string name="title_alarm">Nhắc Nhở</string>
    <string name="title_add_alarm">Thêm nhắc nhở</string>
    <string name="title_edit_alarm">Chỉnh sửa nhắc nhở</string>
    <string name="title_detail_alarm">Chi tiết nhắc nhở</string>

    <string name="alarm_sharp_sign">#</string>
    <string name="alarm_name">Nhắc nhở</string>
    <string name="alarm_time">Thời gian</string>

    <string name="add_alarm_file">Tập tin</string>
    <string name="add_alarm_folder">Thư mục</string>
    <string name="add_alarm_play_type">Kiểu phát</string>
    <string name="add_alarm_play_time">Thời lượng phát</string>
    <string name="add_alarm_loop">Chu kỳ lập</string>
    <string name="add_alarm_loop_times">Số lần lặp lại</string>
    <string name="add_alarm_repeat_days">Lặp lại vào các ngày</string>
    <string name="add_alarm_calendar_type">Loại lịch</string>
    <string name="add_alarm_select_file_or_folder">Chọn tập tin hay thư mục</string>
    <string name="add_alarm_second">Giây</string>
    <string name="add_alarm_times">Lần</string>
    <string name="add_alarm_input_name">Nhập nhắc nhở</string>
    <string name="add_alarm_input_play_time">Nhập thời lượng phát</string>
    <string name="add_alarm_input_loop_times">Nhập số lần lặp lại</string>
    <string name="add_alarm_choose_audio">Chọn âm thanh</string>
    <string name="add_alarm_audio_label">Âm thanh</string>
    <string name="add_alarm_settings_label">Cài đặt</string>
    <string name="dialog_dismiss">Ngưng nhắc nhở</string>
    <string name="dialog_hide">Ẩn nhắc nhở</string>
    <string name="dialog_yes">Có</string>
    <string name="dialog_no">Không</string>
    <string name="delete_alarm">Xoá nhắc nhở</string>
    <string name="delete_alarm_description">Bạn có chắc chắn muốn xoá nhắc nhở "%s" không?</string>

    <string name="description" formatted="false">Lần lập : %s</string>
    <string name="description2" formatted="false">Tên file : %s \n Playing position: %s</string>
    <string name="time_alarm" formatted="false">Thời gian phát : %s </string>
    <string name="next_time_alarm" formatted="false">Thời gian phát kế tiếp: %s</string>
    <string name="app_version">Phiên bản: %s</string>
    <string name="contact_email">Email góp ý: %s</string>
    <string name="close">Đóng</string>

    <!--Popup Menu-->
    <string name="popup_menu_delete">Xóa</string>
    <string name="popup_menu_edit">Thay đổi</string>
    <string name="popup_menu_detail">Chi tiết</string>

    <!--Action Buttons-->
    <string name="action_detail">Chi tiết</string>
    <string name="action_delete">Xóa</string>

    <!--Settings Screen-->
    <string name="settings_title">Cài đặt</string>
    <string name="settings_appearance">Giao diện</string>
    <string name="settings_dark_mode">Chế độ tối</string>
    <string name="settings_dark_mode_desc">Bật giao diện tối</string>
    <string name="settings_language">Ngôn ngữ</string>
    <string name="settings_language_vietnamese">Tiếng Việt</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_desc_vi">Vietnamese</string>
    <string name="settings_language_desc_en">Tiếng Anh</string>
    <string name="settings_developer_info">Thông tin nhà phát triển</string>
    <string name="settings_developer_name">Hoàng Phúc</string>
    <string name="settings_developer_role">Android Developer</string>
    <string name="settings_app_version">Phiên bản 3.0.0</string>
    
    <!-- Days of Week -->
    <string name="day_monday">T2</string>
    <string name="day_tuesday">T3</string>
    <string name="day_wednesday">T4</string>
    <string name="day_thursday">T5</string>
    <string name="day_friday">T6</string>
    <string name="day_saturday">T7</string>
    <string name="day_sunday">CN</string>
    <string name="day_monday_full">Thứ Hai</string>
    <string name="day_tuesday_full">Thứ Ba</string>
    <string name="day_wednesday_full">Thứ Tư</string>
    <string name="day_thursday_full">Thứ Năm</string>
    <string name="day_friday_full">Thứ Sáu</string>
    <string name="day_saturday_full">Thứ Bảy</string>
    <string name="day_sunday_full">Chủ Nhật</string>

    <string-array name="alarm_play_type">
        <item>Từ đầu</item>
        <item>Tiếp tục</item>
    </string-array>

    <string-array name="alarm_loop_type">
        <item>Không lặp lại</item>
        <item>Hàng ngày</item>
        <item>Hàng tuần</item>
        <item>Hàng tháng</item>
        <!--<item>2 phút</item>-->
        <!--<item>3 phút</item>-->
        <!--<item>5 phút</item>-->
        <!--<item>10 phút</item>-->
        <!--<item>15 phút</item>-->
        <!--<item>20 phút</item>-->
        <!--<item>25 phút</item>-->
        <!--<item>30 phút</item>-->
        <!--<item>60 phút</item>-->
    </string-array>

</resources>